--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,36 +9,7 @@ services:
     volumes:
       - ./app/my-app:/app
     environment:
-      - NODE_ENV=development # Set to 'production' for production environment
+      - NODE_ENV=development
     command: npm start 
     ports:
       - "3000:3000"
-    depends_on:
-      - mysql
-
-  # Elasticsearch
-  # container_name: my-elasticsearch
-  # elasticsearch:
-  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
-  #   environment:
-  #     - discovery.type=single-node
-  #   ports:
-  #     - "9200:9200"
-
-  # Nginx
-  nginx:
-    container_name: my-nginx
-    image: nginx:latest
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    ports:
-      - "80:80"
-
-  # MySQL Database
-  mysql:
-    container_name: my-mysql
-    image: mysql:5.7
-    env_file:
-    - .env
-    ports:
-      - "3306:3306"
