--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Container Workflow
+name: CI/CD Workflow
 
 on:
   push:
@@ -9,61 +9,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-        MYSQL_USERNAME: ${{ secrets.MYSQL_USERNAME }}
-        MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Compose
-      run: docker-compose --version
-      continue-on-error: true
-
-    - name: Build and start containers
-      run: |
-        docker-compose -f ../../docker-compose.yml up --build -d
-        sleep 40
-
-    - name: Check Nginx authentication page
-      run: |
-        docker ps -a | grep my-nginx
-        curl -I http://localhost:80
-
-    - name: Check React app container
-      run: |
-        docker ps -a | grep react-app-container
-
-    - name: Check Elasticsearch service
-      run: |
-        docker ps -a | grep my-elasticsearch
-        curl -I http://elasticsearch-container:9200
-    
-        - name: Check MYSQL_USERNAME Secret
+      - name: Build and start containers
         run: |
-          if [ -z "$MYSQL_USERNAME" ]; then
-            echo "MYSQL_USERNAME secret is missing!"
-            exit 1
-          else
-            echo "MYSQL_USERNAME secret is present."
-          fi
-  
-    - name: Check MYSQL_PASSWORD Secret
-      run: |
-        if [ -z "$MYSQL_PASSWORD" ]; then
-          echo "MYSQL_PASSWORD secret is missing!"
-          exit 1
-        else
-          echo "MYSQL_PASSWORD secret is present."
-        fi
+          docker-compose -f ./docker-compose.yml up -d
+          docker-compose -f ./docker-compose.yml ps
 
-    - name: Check MySQL container
-      run: |
-        # Perform a check to ensure that the MySQL container is running
-        docker ps -a | grep my-mysql
-        #Is mysql service running
-        docker exec -it mysql-container mysql -u$MYSQL_USERNAME -p$MYSQL_USERNAME -e "SHOW DATABASES;
+      - name: Wait for containers to start
+        run: |
+          sleep 30
 
-    - name: Clean up
-      run: docker-compose -f ../../docker-compose.yml down
+      - name: Run npm test inside container
+        run: |
+          docker exec -it my-react-app npm test
+
+      - name: Stop and remove containers
+        run: |
+          docker-compose -f ./docker-compose.yml down
