github is non-interactive

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run npm test inside container
         run: |
-          docker exec -it my-react-app sh -c "cd /app && npm install && npm test"
+          docker exec my-react-app sh -c "cd /app && npm install && npm test"
 
       - name: Stop and remove containers
         run: |
