--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    imeout-minutes: 5 
+    timeout-minutes: 5 
 
     steps:
       - name: Checkout code
