--- a/app/package.json
+++ b/app/package.json
@@ -1,55 +1,1 @@
-{
-"name": "app-search-reference-ui-react",
-  "version": "1.7.0",
-  "private": true,
-  "dependencies": {
-    "@elastic/react-search-ui": "^1.15.0",
-    "@elastic/search-ui-app-search-connector": "^1.15.0",
-    "@testing-library/react": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "axios": "axios/dist/node/axios.cjs"
-    }
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-modules": "^0.1.6",
-    "@testing-library/jest-dom": "^5.16.0",
-    "axios": "^1.5.1",
-    "babel-jest": "^29.7.0",
-    "rewire": "^6.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build-js": "node ./scripts/build-no-chunks.js",
-    "build": "npm run build-js",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "engines": {
-    "node": "20.8.0"
-  }
-}
+{"name":"app-search-reference-ui-react","version":"1.7.0","private":true,"dependencies":{"@elastic/react-search-ui":"^1.15.0","@elastic/search-ui-app-search-connector":"^1.15.0","@testing-library/react":"^14.0.0","react":"^18.0.0","react-dom":"^18.0.0","react-scripts":"^5.0.0"},"jest":{"moduleNameMapper":{"axios":"axios/dist/node/axios.cjs"}},"devDependencies":{"@babel/core":"^7.23.0","@babel/plugin-proposal-private-property-in-object":"^7.21.11","@babel/preset-env":"^7.22.20","@babel/preset-modules":"^0.1.6","@testing-library/jest-dom":"^5.16.0","axios":"^1.5.1","babel-jest":"^29.7.0","rewire":"^6.0.0"},"scripts":{"start":"react-scripts start","build-js":"node ./scripts/build-no-chunks.js","build":"npm run build-js","test":"react-scripts test","eject":"react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"engines":{"node":"20.8.0"}}
