--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,10 @@ jobs:
     timeout-minutes: 10
 
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20 
       - name: Checkout code
         uses: actions/checkout@v2
 
